--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,17 +1,35 @@
 body.dark-mode {
-  background-color: black;
-  color: whitesmoke;
+  --body-background: #26242e;
+  --text-color: white;
+  --text-color-inverse: black;
+  --link-color: #a3dafb;
 }
 body.light-mode {
-  background-color: white;
-  color: black;
+  --body-background: white;
+  --text-color: rgba(black, 0.85);
+  --text-color-inverse: whitesmoke;
+  --link-color: coral;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+body {
+  background-color: var(--body-background);
+  color: var(--text-color);
+  font-family: "le-monde-livre-classic-byol", serif;
+  transition: all 0.2s linear;
 }
 
-* {
-  box-sizing: border-box;
+.App {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+.AppHeader {
+  margin-bottom: 1rem;
+}
+.AppMain {
+  flex: 1;
+  overflow-x: hidden;
+}
+.AppFooter {
+  margin-top: 1rem;
 }
